# podcast-links-retriever

./: .dockerignore  .env.example  Dockerfile  docker-compose.yml  main.py  makefile  pyproject.toml  requirements.txt
bot/: apple.py  enlaces.py  google.py  ivoox.py  spotify.py  start.py
configurations/: settings.py
connectors/apple/: __init__.py
connectors/errors/: __init__.py
connectors/google/: __init__.py
connectors/ivoox/: __init__.py
connectors/mongodb/: __init__.py
connectors/spotify/: __init__.py
connectors/spotify/errors/: ShowNotFound.py
connectors/types/: __init__.py
